home page module done

--- a/assets/themes/default/css/blue.css
+++ b/assets/themes/default/css/blue.css
@@ -115,6 +115,9 @@ a {
   background: #fdd922;
   color:#333
 }
+.review{
+  color: orange;
+}
 .copyright-bar .copyright a {
   color: #0f6cb2;
 }
@@ -455,3 +458,6 @@ left:0px
 .terms-conditions-page .contact-form {
   color: #0f6cb2;
 }
+.error{
+    color: red;
+   }
